--- a/Labs/Lab.3/C2_W2_Assignment/C2_W2_Assignment.ipynb
+++ b/Labs/Lab.3/C2_W2_Assignment/C2_W2_Assignment.ipynb
@@ -864,7 +864,7 @@
    "rndtag": "89367"
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -878,7 +878,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
