--- a/Labs/Lab.5/C3_W3_A1_Assignment/C3_W3_A1_Assignment.ipynb
+++ b/Labs/Lab.5/C3_W3_A1_Assignment/C3_W3_A1_Assignment.ipynb
@@ -966,7 +966,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -980,7 +980,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.0"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
